--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
