--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.4",
     "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/typography": "^0.5.19",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.2",
