--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
+    "start": "npx http-server ./dist/studio-fisioterapia-frontend -p 8080",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:studio-fisioterapia-frontend": "node dist/studio-fisioterapia-frontend/server/server.mjs"
+    "test": "ng test"
   },
   "prettier": {
     "overrides": [
@@ -26,12 +25,9 @@
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
-    "@angular/ssr": "^20.0.4",
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/typography": "^0.5.19",
-    "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.2",
     "tslib": "^2.3.0"
@@ -40,7 +36,6 @@
     "@angular/build": "^20.0.4",
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.0.0",
-    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "autoprefixer": "^10.4.21",
