--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
+                  "replace": "src/environments/environment.develop.ts",
                   "with": "src/environments/environment.production.ts"
                 }
               ],
