--- a/package.json
+++ b/package.json
@@ -20,21 +20,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.0.0",
+    "@angular/animations": "^20.3.2",
+    "@angular/common": "^20.3.2",
     "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/router": "^20.0.0",
+    "@angular/core": "^20.3.2",
+    "@angular/forms": "^20.3.2",
+    "@angular/platform-browser": "^20.3.2",
+    "@angular/router": "^20.3.2",
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/typography": "^0.5.19",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.0.4",
-    "@angular/cli": "^20.0.4",
+    "@angular/cli": "^20.3.2",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
